; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_window.c_percent_rankStepFunc.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_window.c_percent_rankStepFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.CallCount = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32**)* @percent_rankStepFunc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @percent_rankStepFunc(i32* %0, i32 %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca %struct.CallCount*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32** %2, i32*** %6, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @UNUSED_PARAMETER(i32 %8)
  %10 = load i32, i32* %5, align 4
  %11 = icmp eq i32 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load i32**, i32*** %6, align 8
  %15 = ptrtoint i32** %14 to i32
  %16 = call i32 @UNUSED_PARAMETER(i32 %15)
  %17 = load i32*, i32** %4, align 8
  %18 = call i64 @sqlite3_aggregate_context(i32* %17, i32 4)
  %19 = inttoptr i64 %18 to %struct.CallCount*
  store %struct.CallCount* %19, %struct.CallCount** %7, align 8
  %20 = load %struct.CallCount*, %struct.CallCount** %7, align 8
  %21 = icmp ne %struct.CallCount* %20, null
  br i1 %21, label %22, label %27

22:                                               ; preds = %3
  %23 = load %struct.CallCount*, %struct.CallCount** %7, align 8
  %24 = getelementptr inbounds %struct.CallCount, %struct.CallCount* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %24, align 4
  br label %27

27:                                               ; preds = %22, %3
  ret void
}

declare dso_local i32 @UNUSED_PARAMETER(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @sqlite3_aggregate_context(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
